<resources>
    <string name="app_name">Orbis Runner</string>

    <!-- Used in start screen -->
    <string name="play">Play</string>
    <string name="level_select">Level Select</string>
    <string name="settings">Settings</string>
    <string name="customize">Customize</string>

    <!-- Used in death screen -->
    <string name="main_menu">Main Menu</string>
    <string name="you_died_on_level_">You Died On Level %d</string>
    <string name="retry">Retry</string>

    <!-- Used in splash screen -->
    <string name="created">uwu</string>

    <!-- Used in settings screen -->
    <string name="music">Music</string>
    <string name="sound">Sound</string>
    <string name="reset">Reset</string>
    <string name="confirm_reset">Confirm Reset</string>

    <!-- Used in customize screen -->
    <string name="selected">Selected</string>
    <string name="color_">Color:</string>

    <!-- Used in shop screen -->
    <string name="shop">Shop</string>
    <string name="already_bought">You already bought this item!</string>
    <string name="insufficient_coins">You don\'t have enough coins!</string>
    <string name="buy">Buy</string>
    <string name="buy_item_for_price">Buy [%s] for %d coins?</string>
    <string name="price_">Price: %d</string>
    <string name="bought">Bought</string>

    <!-- Used in finish screen -->
    <string name="next_level">Next Level</string>
    <string name="objective">Objective:</string>
    <string name="finished">Finished</string>
    <string name="collect_all_coins">Collect all coins:</string>
    <string name="stats">Stats:</string>
    <string name="total_deaths">Total deaths:</string>
    <string name="total_coins_collected">Total coins collected:</string>

    <!-- Used in level maker -->
    <string name="level_maker">Level Maker</string>
    <string name="pos_">Pos:</string>
    <string name="height_">Height:</string>
    <string name="size_">Size:</string>
    <string name="make_level_question">Do you want to make a new level or edit a level?</string>
    <string name="new_">New</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="level_and_number">Level %d</string>
    <string name="edit_level">Edit Level</string>
    <string name="level">Level</string>
    <string name="save">Save</string>
    <string name="saved">Saved!</string>
    <string name="remove">Remove</string>

    <!-- Used in level selector -->
    <string name="levels">Levels</string>
    <string name="delete">Delete</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>

    <!-- Used in level exporter -->
    <string name="copy_all">Copy All</string>
    <string name="copy_specific">Copy specific</string>
    <string name="bonus_coins">+5 coins</string>

    <!-- Used in about screen -->
    <string name="about">About</string>
    <string name="lore">Lore</string>
    <string name="makers">Makers</string>
    <string name="j_winkelman">J. Winkelman</string>
    <string name="o_sonnemans">O. Sonnemans</string>
    <string name="q_correia">Q. Correia</string>
    <string name="s_uz">S. Uz</string>
    <string name="back">Back</string>
    <string name="project_info">Project Info</string>
    <string name="filler_text">OwO?! What\'s this?</string>
    <string name="project_info_text">We are students from Het Saxion College te Enschede. Orbis Runner was made for a school project called Playground. Thanks for playing our app! uwu</string>
    <string name="lore_text">Your name is Peter and you\'re on a journey to collect as many coins as you can. You need these coins to buy medicine for your dying mother. She\'s at home waiting for your return.\n You slowly forget your purpose as you venture the orbis realms and get engrossed with coins and the hats you can buy with them.\n\nYou can stop whenever you want, you say.\nYou\'re collecting coins for your mom, you say.</string>
    <string name="send_mail">Send Mail</string>
    <string name="about_this_app">About this app</string>
    <string name="keep_coins_after_death">Keep coins after death</string>
</resources>
