<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="nl.saxion.playground.orbisrunner.ui.FinishScreenActivity">

    <TextView
        style="@style/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Finished" />

    <TextView
        style="@style/Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:text="Objectives:" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Collect all coins:" />

        <ImageView
            android:id="@+id/completed"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="8dp"
            android:adjustViewBounds="true"
            android:contentDescription="@android:string/untitled"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/red_cross" />
    </LinearLayout>

    <TextView
        style="@style/Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:text="Stats:" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TableRow>

            <TextView android:text="Total deaths:" />

            <TextView
                android:id="@+id/totalDeaths"
                android:paddingHorizontal="16dp"
                tools:text="0" />
        </TableRow>

        <TableRow>

            <TextView android:text="Total coins collected:" />

            <TextView
                android:id="@+id/totalCoins"
                android:paddingHorizontal="16dp"
                tools:text="0" />
        </TableRow>
    </TableLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/nextLevelButton"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginVertical="32dp"
        android:background="@drawable/black_ring"
        android:gravity="center"
        android:text="@string/next_level"
        android:textColor="@color/colorAccent"
        android:textSize="32sp" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/retryLevelButton"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/retry" />

    <Button
        android:id="@+id/mainMenuButton"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/main_menu" />
</LinearLayout>
